[tool.poetry]
name = "apikeyper"
version = "0.1.0"
description = ""
authors = ["Taylor B. <tayjaybabee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^41.0.4"
appdirs = "^1.4.4"
keyring = "^23.13.1"
rich = "^13.4.2"
prompt-toolkit = "^3.0.39"


[tool.poetry.group.docs.dependencies]
sphinxcontrib-autoprogram = "^0.1.8"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.2.2"
recommonmark = "^0.7.1"
sphinx-autodoc-typehints = "^1.24.0"


[tool.poetry.group.gui.dependencies]
pysimplegui = "^4.60.5"


[tool.poetry.group.cli.dependencies]
npyscreen = "^4.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 
